# mud

./: .gitignore  Cargo.toml  README.md  comparen.agda  comparen.agdai  o_test.agda  output_file.agda  output_file.agdai  output_file.lagda  pos_benchmark_results.csv  ppp.agda  tamber.agda
Scripts/: run_server.bat  run_server.sh  setup_venv.bat  setup_venv.sh
agda/: LiftRecordExample.agda  ModalLogic.agda  adjectives.agda  adjectives.agdai  amber.agda  amber.agdai  amber_cake.agda  amber_cake.agdai  contractible.agda  contractible.agdai  hit_adjectives.agda  hit_adjectives.agdai  hott_adjectives.agda  hott_adjectives.agdai  modal_built.agda  modal_built.agdai  modal_built.lagda  modal_logic.agda  modal_logic.agdai  modal_logic.lagda  modal_ultimate.agda  modal_ultimate.agdai  mortal.agda  mortal.agdai  new.agda  new.agdai  newagda.agda  newagda.agdai  propeq.agda  propeq.agdai  quest0.agda  quotient.agdai  sets_and_domain.agda  siblings.lagda  synset.agda  synset.agdai  truncation.agda  ttr.agda  ttr.lagda  yellowCheese.agdai  (+2 more)
data/: CCG_parse_test.json  ccg_parsed_sentence.json  existential_quantifiers.txt  irregular_verbs.txt  universal_quantifiers.txt
examples/: AManLikesBigYellowCheese.agda  AManLikesBigYellowCheese.agdai  AManLikesCheese.agda  AManLikesCheese.agdai  AManLikesEveryCheese.agda  AManLikesEveryCheese.agdai  AManLikesGoudaAndBrie.agda  AManLikesGoudaAndBrie.agdai  EveryManIsABigAnimal.agda  EveryManIsABigAnimal.agdai  EveryThorstenLikesLean.agda  EveryThorstenLikesLean.agdai  JohnIsAMan.agda  JohnIsAMan.agdai  JohnIsHappy.agda  JohnIsHappy.agdai
(+140 files in other folders)
