[package]
name = "hottnat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
once_cell = "1.20.2"
nom = "7"
bytes = "1.9.0"
ascii_tree="*"
uuid = { version = "1.12.1", features = ["v4"] }
clap = "4.5.31"
tokio = { version = "1.43.0", features = ["full"] }
warp="*"
colored = "3.0.0"
crossterm = "*"
lazy_static = "1.5.0"